@@ -81,7 +81,7 @@ public class JwtVerifier {
         } catch (UnexpectedJwtTypeException | AuthenticationNotFoundException e) {
             throw e;
         } catch (Exception e) {
-            var message = String.format("Access token is not valid: %s", accessToken);
+            var message = "Access token is not valid: %s".formatted(accessToken);
             throw new InvalidJwtException(message, e);
         }
     }
@@ -111,7 +111,7 @@ public class JwtVerifier {
     private void verifyAccessTokenType(DecodedJwt decodedJwt) {
         logger.trace("[JWT_VERIFIER] Step 2/3: Verifying token type is ACCESS");
         if (!decodedJwt.isAccessToken()) {
-            throw new UnexpectedJwtTypeException(String.format("JWT %s is not an access token", decodedJwt.encodedToken()));
+            throw new UnexpectedJwtTypeException("JWT %s is not an access token".formatted(decodedJwt.encodedToken()));
         }
     }
 
@@ -127,7 +127,7 @@ public class JwtVerifier {
         logger.trace("[JWT_VERIFIER] Step 3/3: Checking access token exists in store");
         var isTokenActive = redisJwtStore.accessTokenExists(accessToken);
         if (!isTokenActive) {
-            throw new AuthenticationNotFoundException(String.format("Authentication session not found in store for access token: %s", accessToken));
+            throw new AuthenticationNotFoundException("Authentication session not found in store for access token: %s".formatted(accessToken));
         }
     }
 
